--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./static/styles/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js"></script>
   </body>
     <title>Hyun's Container Mk.2</title>
   </head>
@@ -268,11 +266,6 @@
       <div><span class="old contact_bottom">HYUN’S CONTAINER</span></div>
     </div>
   </section>
-
-    <script src="public/bundle.js"></script>
-    <script>
-      gsap.registerPlugin(ScrollTrigger);
-
-      let list = gsap.utils.toArraay('')
-    </script>
+  <script src="bundle.js"></script>
+  <script src="index.js"></script>
 </html>
